            Bangle.js2: Bangle.setOptions({lowResistanceFix:1}) now provides a workaround for Bangle.js owners that have a Bangle with a button that appears stuck on
            Bangle.js: Remove calls to require('locale').translate in menus as it's been deprecated and replaced with /*LANG*/
            Espruino: fix potential MEMORY_BUSY caused by Date requesting an integer from a var
              - also speed up ObjectGetInteger by not requiring a new var to be allocated to unpack a NAME_INT

     2v21 : nRF52: free up 800b more flash by removing vector table padding
            Throw Exception when a Promise tries to resolve with another Promise (#2450)
            Add 'lcdBufferPtr' to Bangle.getOptions
            Allow E.nativeCall to take 32 bit floats (eg for Inline C)
            Add built-in Stepper motor handling with the `Stepper` class (if enabled in build)
            Fix issue requesting constructor of builtin before the class itself has been accessed (fix #2451)
            Allow pretokenisation to store raw, unencoded Strings for speed/efficiency
            Automatic decoding and pretokenisation of 'atob(".....")' strings
            Pull out pretokenisation on SAVE_ON_FLASH boards (pretokenised code can be executed, it's just not tokenised in Espruino - saves 1kb)
            Bangle.js: Fix out of bounds coordinates in LCD code that caused screen corruption on newer GCC builds (#2455)
            Bangle.js2: In flash bootloader, don't store flash write code in RAM (no need) (fix #2458)
            Remove 65535-char max native string length restriction introduced in 2v20 on devices that could support more like Bangle.js 2
            E.memoryArea(0, ...) now returns `undefined`
            Fix issue using Flat/Flash/Native Strings to create fields in objects
            Optimise pretokenised Strings so we load very short strings direct to RAM
            Add jsvGet...Child functions to replace common call patterns - saves 280 bytes on Pico